[package]
name = "node-exporter"
description = "A partial clone of the Prometheus node exporter written in Rust"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
rust-version = "1.70.0"
version = "0.1.0"

[lib]
name = "node_exporter"

[[bin]]
name = "node-exporter"

[dependencies]
actix-web = { version = "4.4.1" }
anyhow = "1.0.79"
lazy_static = "^1.4"
parking_lot = "0.12.1"
procfs = "^0.16"
prometheus = { version = "0.13.0", features = [] }
static_init = "1.0.3"
tokio = { version = "1.35.1", features = [
    "rt-multi-thread",
    "rt",
    "time",
    "macros",
    "io-util",
    "net",
] }

[profile.release]
debug = false
lto = "thin"
opt-level = "z"
strip = true
