[package]
name = "node-exporter"
description = "A partial clone of the Prometheus node exporter written in Rust"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
rust-version = "1.70.0"
version = "0.1.0"

[lib]
name = "node_exporter"

[[bin]]
name = "node-exporter"

[dependencies]
actix-web = { version = "4.4.1" , default-features = false, features = ["macros"]}
anyhow = "1.0.79"
env_logger = { version = "0.11.3", default-features = false }
lazy_static = "^1.4"
log = { version = "0.4.21", default-features = false }
parking_lot = "0.12.1"
procfs = "^0.16"
prometheus = { version = "0.13.0", default-features = false }
static_init = "1.0.3"
tokio = { version = "1.35.1", features = [
    "rt",
] }

[profile.release]
debug = false
lto = "fat"
opt-level = "z"
strip = true
